# dr_eigen

./: CMakeLists.txt  package.xml
include/dr_eigen/: average.hpp  eigen.hpp  interpolate.hpp  param.hpp  plane.hpp  ros.hpp  tf.hpp  yaml.hpp
include/dr_eigen/test/: compare.hpp
src/: param.cpp  yaml.cpp
test/: average.cpp  axes.cpp  box.cpp  compare.cpp  eigen_to_ros.cpp  eigen_to_tf.cpp  param_alignedbox.cpp  param_isometry.cpp  param_quaternion.cpp  param_vector.cpp  plane.cpp  quaternion_conversions.cpp  ros_to_eigen.cpp  rotate.cpp  tf_to_eigen.cpp  translate.cpp  yaml.cpp
